CORE-44506: NB PDP - Fixing share icons alignment in AR and reverting unecessary code.

--- a/docroot/themes/custom/transac/alshaya_new_balance/sass/components/imagegallery/_imagegallery.scss
+++ b/docroot/themes/custom/transac/alshaya_new_balance/sass/components/imagegallery/_imagegallery.scss
@@ -11,7 +11,6 @@
       position: absolute !important;
       width: 100% !important;
       margin-bottom: rem(20);
-      justify-content: center;
     }
   }
 }
